--- a/kadai5-1.html
+++ b/kadai5-1.html
@@ -16,8 +16,29 @@
             const endpoint = "https://zipcloud.ibsnet.co.jp/api/search";
             // ここにコードを書く
             // zipcloudのAPI呼び出して結果を表示する
-            document.getElementById("result").innerHTML =  myForm.zipcode.value; // 現状ではそのまま表示しているだけ
+            const zipcode = myForm.zipcode.value.trim();
+
+    if (!zipcode) {
+        document.getElementById("result").innerHTML = "郵便番号を入力してください。";
+        return;
+    }
+
+    try {
+        const response = await fetch(`${endpoint}?zipcode=${zipcode}`);
+        const data = await response.json();
+
+        if (data.status === 200 && data.results) {
+            const address = data.results[0];
+            document.getElementById("result").innerHTML =
+                `住所: ${address.address1} ${address.address2} ${address.address3}`;
+        } else {
+            document.getElementById("result").innerHTML = "該当する住所が見つかりませんでした。";
         }
+    } catch (error) {
+        document.getElementById("result").innerHTML = "エラーが発生しました。";
+        console.error(error);
+    }
+}
     </script>
 </body>
 </html>
